@@ -26,14 +26,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>120</width>
+    <width>100</width>
     <height>180</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>40</width>
-    <height>160</height>
+    <width>100</width>
+    <height>180</height>
    </size>
   </property>
   <property name="maximumSize">
